@@ -219,7 +219,7 @@ void SCR_CenterPrint (const char *str)
 
 static void SCR_DrawCenterString (void)
 {
-	int	i;
+	int	i, cnt;
 	int	bx, by;
 	char	temp[80];
 
@@ -229,8 +229,9 @@ static void SCR_DrawCenterString (void)
 
 	for (i = 0; i < lines; i++, by += 8)
 	{
-		strncpy (temp, &scr_centerstring[StartC[i]], EndC[i] - StartC[i]);
-		temp[EndC[i] - StartC[i]] = 0;
+		cnt = EndC[i] - StartC[i];
+		strncpy (temp, &scr_centerstring[StartC[i]], cnt);
+		temp[cnt] = 0;
 		bx = (40-strlen(temp)) * 8 / 2;
 		M_Print2 (bx, by, temp);
 	}
@@ -816,7 +817,7 @@ void SCR_BringDownConsole (void)
 
 static void Plaque_Draw (const char *message, qboolean AlwaysDraw)
 {
-	int	i;
+	int	i, cnt;
 	int	bx, by;
 	char	temp[80];
 
@@ -833,8 +834,9 @@ static void Plaque_Draw (const char *message, qboolean AlwaysDraw)
 
 	for (i = 0; i < lines; i++, by += 8)
 	{
-		strncpy (temp, &message[StartC[i]], EndC[i] - StartC[i]);
-		temp[EndC[i] - StartC[i]] = 0;
+		cnt = EndC[i] - StartC[i];
+		strncpy (temp, &message[StartC[i]], cnt);
+		temp[cnt] = 0;
 		bx = (40-strlen(temp)) * 8 / 2;
 		M_Print2 (bx, by, temp);
 	}
@@ -842,7 +844,7 @@ static void Plaque_Draw (const char *message, qboolean AlwaysDraw)
 
 static void Info_Plaque_Draw (const char *message)
 {
-	int	i;
+	int	i, cnt;
 	int	bx, by;
 	char	temp[80];
 
@@ -865,8 +867,9 @@ static void Info_Plaque_Draw (const char *message)
 
 	for (i = 0; i < lines; i++, by += 8)
 	{
-		strncpy (temp, &message[StartC[i]], EndC[i] - StartC[i]);
-		temp[EndC[i] - StartC[i]] = 0;
+		cnt = EndC[i] - StartC[i];
+		strncpy (temp, &message[StartC[i]], cnt);
+		temp[cnt] = 0;
 		bx = (40-strlen(temp)) * 8 / 2;
 		M_Print2 (bx, by, temp);
 	}
@@ -874,7 +877,7 @@ static void Info_Plaque_Draw (const char *message)
 
 static void Bottom_Plaque_Draw (const char *message)
 {
-	int	i;
+	int	i, cnt;
 	int	bx, by;
 	char	temp[80];
 
@@ -888,8 +891,9 @@ static void Bottom_Plaque_Draw (const char *message)
 
 	for (i = 0; i < lines; i++, by += 8)
 	{
-		strncpy (temp, &message[StartC[i]], EndC[i] - StartC[i]);
-		temp[EndC[i] - StartC[i]] = 0;
+		cnt = EndC[i] - StartC[i];
+		strncpy (temp, &message[StartC[i]], cnt);
+		temp[cnt] = 0;
 		bx = (40-strlen(temp)) * 8 / 2;
 		M_Print (bx, by, temp);
 	}
